--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ setuptools~=65.5.0
 WTForms~=3.2.1
 protobuf~=6.30.2
 google-api-python-client~=2.169.0
+typing_extensions~=4.13.2
+mysql-connector-python~=9.3.0
+telegram~=0.0.1
+python-telegram-bot~=22.1
